Add women's test page, team images

--- a/test.html
+++ b/test.html
@@ -47,7 +47,7 @@
     <tbody>
       <tr>
         <td>1</td>
-        <td class="team-name"><a class="team-link" href="test_nbr.html">North Brooklyn Runners</a></th>
+        <td class="team-name"><a class="team-link" href="test_nbr_men.html">North Brooklyn Runners</a></th>
         <td>30</td>
         <td>15</td>
         <td>15</td>
@@ -151,7 +151,7 @@
     <tbody>
       <tr>
         <td>1</td>
-        <td class="team-name">North Brooklyn Runners</th>                                                                                 
+        <td class="team-name"><a class="team-link" href="test_nbr_women.html">North Brooklyn Runners</a></th>                                                                                 
         <td>30</td>                                                                                                                       
         <td>15</td>                                                                                                                       
         <td>15</td>                                                                                                                       
