Race tooltips, etc

--- a/test.html
+++ b/test.html
@@ -12,6 +12,7 @@
   <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
 
   <script language="javascript" type="text/javascript" src="assets/linker/js/3p/jquery-1.10.2.min.js"></script>
+  <script language="javascript" type="text/javascript" src="assets/linker/js/3p/underscore-min.js"></script>
   <script language="javascript" type="text/javascript" src="assets/linker/js/3p/bootstrap.min.js"></script>
   <script language="javascript" type="text/javascript" src="test.js"></script>
 </head>
@@ -19,11 +20,14 @@
 <body>
 
 <div class="top-bar">
-  About
+  <div class="last-updated">Last Updated Dec. 20, 2013 5:35 PM</div>
+  <div class="link">
+    <a>About</a>
+  </div>
 </div>
 
 <div class="header">
-  Club<span class="header-secondary">Pointz</span>
+  <a href="test.html">Club<span class="header-secondary">Pointz</span></a>
 </div>
 
 <div class="main">
@@ -36,13 +40,13 @@
        <th>Rank</th>
        <th>Club Name</th>
        <th>Total Points</th>
-       <th>3/3 5K</th>
-       <th>4/6 10K</th>
-       <th>6/16 5M</th>
-       <th>6/29 5M</th>
-       <th>8/3 5M</th>
-       <th>9/7 4M</th>
-       <th>9/22 1M</th>
+       <th><a class="race-link">3/3 5K</a></th>
+       <th><a class="race-link">4/6 10K</a></th>
+       <th><a class="race-link">6/16 5M</a></th>
+       <th><a class="race-link">6/29 5M</a></th>
+       <th><a class="race-link">8/3 5M</a></th>
+       <th><a class="race-link">9/7 4M</a></th>
+       <th><a class="race-link">9/22 1M</a></th>
     </thead>
     <tbody>
       <tr>
