--- a/test_nbr_men.html
+++ b/test_nbr_men.html
@@ -19,11 +19,14 @@
 <body>
 
 <div class="top-bar">
-  About
+  <div class="last-updated">Last Updated Dec. 20, 2013 5:35 PM</div>
+  <div class="link">
+    <a>About</a>
+  </div>
 </div>
 
 <div class="header">
-  Club<span class="header-secondary">Pointz</span>
+  <a href="test.html">Club<span class="header-secondary">Pointz</span></a>
 </div>
 
 <div class="navigation">
